k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: classroom-lm
  labels:
    app: classroom-lm
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
  selector:
    matchLabels:
      app: classroom-lm
  template:
    metadata:
      labels:
        app: classroom-lm
    spec:
      restartPolicy: Always
      containers:
        - name: classroom-lm
          image: !!!<insert registry url, eg localhost>:<insert registry port>/classroom-lm/classroom-lm-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8080
          resources:
            limits:
              cpu: "0.50"
              memory: "128Mi"
            requests:
              cpu: "0.25"
              memory: "64Mi"
          volumeMounts:
            - name: config-volume
              mountPath: /app/.env
              subPath: .env
      volumes:
        - name: config-volume
          configMap:
            name: next-config
            items:
              - key: .env
                path: .env
