k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: classroom-lm
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: classroom-lm
                port:
                  number: 8080
          - path: /webhook
            pathType: ImplementationSpecific
            backend:
              service:
                name: el-cd-listener
                port:
                  number: 8080
